--- a/absl/CMakeLists.txt
+++ b/absl/CMakeLists.txt
@@ -23,11 +23,11 @@ add_subdirectory(debugging)
 #add_subdirectory(flags)
 add_subdirectory(hash)
 add_subdirectory(memory)
-add_subdirectory(meta)
-add_subdirectory(numeric)
-add_subdirectory(random)
+#add_subdirectory(meta)
+#add_subdirectory(numeric)
+#add_subdirectory(random)
 add_subdirectory(strings)
-add_subdirectory(synchronization)
-add_subdirectory(time)
+#add_subdirectory(synchronization)
+#add_subdirectory(time)
 add_subdirectory(types)
 add_subdirectory(utility)
