--- a/absl/CMakeLists.txt
+++ b/absl/CMakeLists.txt
@@ -23,8 +23,8 @@ add_subdirectory(debugging)
 #add_subdirectory(flags)
 add_subdirectory(hash)
 add_subdirectory(memory)
-#add_subdirectory(meta)
-#add_subdirectory(numeric)
+add_subdirectory(meta)
+add_subdirectory(numeric)
 #add_subdirectory(random)
 add_subdirectory(strings)
 #add_subdirectory(synchronization)
