--- a/absl/CMakeLists.txt
+++ b/absl/CMakeLists.txt
@@ -27,7 +27,7 @@ add_subdirectory(meta)
 add_subdirectory(numeric)
 #add_subdirectory(random)
 add_subdirectory(strings)
-#add_subdirectory(synchronization)
+add_subdirectory(synchronization)
 #add_subdirectory(time)
 add_subdirectory(types)
 add_subdirectory(utility)
