--- a/absl/CMakeLists.txt
+++ b/absl/CMakeLists.txt
@@ -20,14 +20,14 @@ add_subdirectory(base)
 add_subdirectory(algorithm)
 add_subdirectory(container)
 add_subdirectory(debugging)
-#add_subdirectory(flags)
+add_subdirectory(flags)
 add_subdirectory(hash)
 add_subdirectory(memory)
 add_subdirectory(meta)
 add_subdirectory(numeric)
-#add_subdirectory(random)
+add_subdirectory(random)
 add_subdirectory(strings)
 add_subdirectory(synchronization)
-#add_subdirectory(time)
+add_subdirectory(time)
 add_subdirectory(types)
 add_subdirectory(utility)
