Expose top-level absl static and shared target for tcmalloc to depend on. Having one target makes the linking with tcmalloc easier to express, (but at the cost of taking a bit more work to update Abseil).

--- a/absl/algorithm/BUILD.bazel
+++ b/absl/algorithm/BUILD.bazel
@@ -33,6 +33,7 @@ package(
 licenses(["notice"])
 
 cc_library(
+    alwayslink = True,
     name = "algorithm",
     hdrs = ["algorithm.h"],
     copts = ABSL_DEFAULT_COPTS,
@@ -57,6 +58,7 @@ cc_test(
 )
 
 cc_library(
+    alwayslink = True,
     name = "container",
     hdrs = [
         "container.h",
