--- a/absl/base/BUILD.bazel
+++ b/absl/base/BUILD.bazel
@@ -33,6 +33,7 @@ package(
 licenses(["notice"])
 
 cc_library(
+    alwayslink = True,
     name = "atomic_hook",
     hdrs = ["internal/atomic_hook.h"],
     copts = ABSL_DEFAULT_COPTS,
@@ -47,6 +48,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "errno_saver",
     hdrs = ["internal/errno_saver.h"],
     copts = ABSL_DEFAULT_COPTS,
@@ -58,6 +60,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "log_severity",
     srcs = ["log_severity.cc"],
     hdrs = ["log_severity.h"],
@@ -70,6 +73,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "no_destructor",
     hdrs = ["no_destructor.h"],
     copts = ABSL_DEFAULT_COPTS,
@@ -81,6 +85,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "nullability",
     srcs = ["internal/nullability_impl.h"],
     hdrs = ["nullability.h"],
@@ -94,6 +99,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "raw_logging_internal",
     srcs = ["internal/raw_logging.cc"],
     hdrs = ["internal/raw_logging.h"],
@@ -112,6 +118,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "spinlock_wait",
     srcs = [
         "internal/spinlock_akaros.inc",
@@ -134,6 +141,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "config",
     hdrs = [
         "config.h",
@@ -145,6 +153,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "cycleclock_internal",
     hdrs = [
         "internal/cycleclock_config.h",
@@ -162,6 +171,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "dynamic_annotations",
     srcs = [
         "internal/dynamic_annotations.h",
@@ -178,6 +188,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "core_headers",
     hdrs = [
         "attributes.h",
@@ -195,6 +206,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "malloc_internal",
     srcs = [
         "internal/low_level_alloc.cc",
@@ -226,6 +238,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "base_internal",
     hdrs = [
         "internal/hide_ptr.h",
@@ -246,6 +259,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "base",
     srcs = [
         "internal/cycleclock.cc",
@@ -353,6 +367,7 @@ cc_test(
 )
 
 cc_library(
+    alwayslink = True,
     name = "throw_delegate",
     srcs = ["internal/throw_delegate.cc"],
     hdrs = ["internal/throw_delegate.h"],
@@ -410,6 +425,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "pretty_function",
     hdrs = ["internal/pretty_function.h"],
     linkopts = ABSL_DEFAULT_LINKOPTS,
@@ -554,6 +570,7 @@ cc_binary(
 )
 
 cc_library(
+    alwayslink = True,
     name = "endian",
     hdrs = [
         "internal/endian.h",
@@ -769,6 +786,7 @@ cc_test(
 )
 
 cc_library(
+    alwayslink = True,
     name = "strerror",
     srcs = ["internal/strerror.cc"],
     hdrs = ["internal/strerror.h"],
@@ -813,6 +831,7 @@ cc_binary(
 )
 
 cc_library(
+    alwayslink = True,
     name = "fast_type_id",
     hdrs = ["internal/fast_type_id.h"],
     copts = ABSL_DEFAULT_COPTS,
@@ -839,6 +858,7 @@ cc_test(
 )
 
 cc_library(
+    alwayslink = True,
     name = "prefetch",
     hdrs = [
         "prefetch.h",
@@ -867,6 +887,7 @@ cc_test(
 )
 
 cc_library(
+    alwayslink = True,
     name = "poison",
     srcs = [
         "internal/poison.cc",
