--- a/absl/flags/BUILD.bazel
+++ b/absl/flags/BUILD.bazel
@@ -33,6 +33,7 @@ package(
 licenses(["notice"])
 
 cc_library(
+    alwayslink = True,
     name = "path_util",
     hdrs = [
         "internal/path_util.h",
@@ -49,6 +50,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "program_name",
     srcs = [
         "internal/program_name.cc",
@@ -72,6 +74,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "config",
     srcs = [
         "usage_config.cc",
@@ -93,6 +96,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "marshalling",
     srcs = [
         "marshalling.cc",
@@ -114,6 +118,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "commandlineflag_internal",
     srcs = [
         "internal/commandlineflag.cc",
@@ -133,6 +138,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "commandlineflag",
     srcs = [
         "commandlineflag.cc",
@@ -152,6 +158,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "private_handle_accessor",
     srcs = [
         "internal/private_handle_accessor.cc",
@@ -173,6 +180,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "reflection",
     srcs = [
         "reflection.cc",
@@ -198,6 +206,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "flag_internal",
     srcs = [
         "internal/flag.cc",
@@ -228,6 +237,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "flag",
     hdrs = [
         "declare.h",
@@ -247,6 +257,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "usage_internal",
     srcs = [
         "internal/usage.cc",
@@ -276,6 +287,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "usage",
     srcs = [
         "usage.cc",
@@ -296,6 +308,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "parse",
     srcs = ["parse.cc"],
     hdrs = [
