--- a/absl/profiling/BUILD.bazel
+++ b/absl/profiling/BUILD.bazel
@@ -31,6 +31,7 @@ package(
 licenses(["notice"])
 
 cc_library(
+    alwayslink = True,
     name = "sample_recorder",
     hdrs = ["internal/sample_recorder.h"],
     copts = ABSL_DEFAULT_COPTS,
@@ -65,6 +66,7 @@ cc_test(
 )
 
 cc_library(
+    alwayslink = True,
     name = "exponential_biased",
     srcs = ["internal/exponential_biased.cc"],
     hdrs = ["internal/exponential_biased.h"],
@@ -94,6 +96,7 @@ cc_test(
 )
 
 cc_library(
+    alwayslink = True,
     name = "periodic_sampler",
     srcs = ["internal/periodic_sampler.cc"],
     hdrs = ["internal/periodic_sampler.h"],
