--- a/absl/types/BUILD.bazel
+++ b/absl/types/BUILD.bazel
@@ -32,6 +32,7 @@ package(
 licenses(["notice"])
 
 cc_library(
+    alwayslink = True,
     name = "any",
     hdrs = ["any.h"],
     copts = ABSL_DEFAULT_COPTS,
@@ -47,6 +48,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "bad_any_cast",
     hdrs = ["bad_any_cast.h"],
     copts = ABSL_DEFAULT_COPTS,
@@ -58,6 +60,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "bad_any_cast_impl",
     srcs = [
         "bad_any_cast.cc",
@@ -106,6 +109,7 @@ cc_test(
 )
 
 cc_library(
+    alwayslink = True,
     name = "span",
     srcs = [
         "internal/span.h",
@@ -146,6 +150,7 @@ cc_test(
 )
 
 cc_library(
+    alwayslink = True,
     name = "optional",
     srcs = ["internal/optional.h"],
     hdrs = ["optional.h"],
@@ -164,6 +169,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "bad_optional_access",
     srcs = ["bad_optional_access.cc"],
     hdrs = ["bad_optional_access.h"],
@@ -176,6 +182,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "bad_variant_access",
     srcs = ["bad_variant_access.cc"],
     hdrs = ["bad_variant_access.h"],
@@ -223,6 +230,7 @@ cc_test(
 )
 
 cc_library(
+    alwayslink = True,
     name = "variant",
     srcs = ["internal/variant.h"],
     hdrs = ["variant.h"],
@@ -291,6 +299,7 @@ cc_test(
 )
 
 cc_library(
+    alwayslink = True,
     name = "compare",
     hdrs = ["compare.h"],
     copts = ABSL_DEFAULT_COPTS,
