--- a/absl/cleanup/BUILD.bazel
+++ b/absl/cleanup/BUILD.bazel
@@ -31,6 +31,7 @@ package(
 licenses(["notice"])
 
 cc_library(
+    alwayslink = True,
     name = "cleanup_internal",
     hdrs = ["internal/cleanup.h"],
     copts = ABSL_DEFAULT_COPTS,
@@ -43,6 +44,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "cleanup",
     hdrs = [
         "cleanup.h",
