--- a/absl/numeric/BUILD.bazel
+++ b/absl/numeric/BUILD.bazel
@@ -31,6 +31,7 @@ package(
 licenses(["notice"])
 
 cc_library(
+    alwayslink = True,
     name = "bits",
     hdrs = [
         "bits.h",
@@ -76,6 +77,7 @@ cc_test(
 )
 
 cc_library(
+    alwayslink = True,
     name = "int128",
     srcs = [
         "int128.cc",
@@ -129,6 +131,7 @@ cc_test(
 )
 
 cc_library(
+    alwayslink = True,
     name = "representation",
     hdrs = [
         "internal/representation.h",
