--- a/absl/random/BUILD.bazel
+++ b/absl/random/BUILD.bazel
@@ -35,6 +35,7 @@ package(
 licenses(["notice"])
 
 cc_library(
+    alwayslink = True,
     name = "random",
     hdrs = ["random.h"],
     copts = ABSL_DEFAULT_COPTS,
@@ -50,6 +51,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "distributions",
     srcs = [
         "discrete_distribution.cc",
@@ -89,6 +91,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "seed_gen_exception",
     srcs = ["seed_gen_exception.cc"],
     hdrs = ["seed_gen_exception.h"],
@@ -98,6 +101,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "seed_sequences",
     srcs = ["seed_sequences.cc"],
     hdrs = [
@@ -118,6 +122,7 @@ cc_library(
 )
 
 cc_library(
+    alwayslink = True,
     name = "bit_gen_ref",
     hdrs = ["bit_gen_ref.h"],
     copts = ABSL_DEFAULT_COPTS,
