--- a/vs/Common.props
+++ b/vs/Common.props
@@ -3,15 +3,19 @@
   <PropertyGroup Label="UserMacros" Condition="'$(PlatformToolset)' == 'Intel C++ Compiler 2024'">
     <IgnoreX86PreferredToolArchitecture>false</IgnoreX86PreferredToolArchitecture>
   </PropertyGroup>
+  <PropertyGroup Label="UserMacros">
+    <PlatformConfigurationToolset>$([System.String]::Copy('$(Platform)-$(Configuration)-$(PlatformToolset)').Replace('Intel C++ Compiler ', 'icx').Replace('Win32', 'x86').Replace('Debug', 'd').Replace('Release', 'r').Replace(' ', '').ToLower())</PlatformConfigurationToolset>
+  </PropertyGroup>
   <PropertyGroup>
     <_PropertySheetDisplayName>Common properties</_PropertySheetDisplayName>
-    <OutDir>$(SolutionDir)build.msvc\$(Platform)-$(Configuration)\</OutDir>
-    <IntDir>$(SolutionDir)build.msvc\.obj\$(Platform)-$(Configuration)-$(PlatformToolset)\$(ProjectName)\</IntDir>
+    <OutDir>$(SolutionDir)build.msvc\$(PlatformConfigurationToolset)\</OutDir>
+    <IntDir>$(SolutionDir)build.msvc\.obj\$(PlatformConfigurationToolset)\$(ProjectName)\</IntDir>
     <LinkIncremental Condition="'$(Configuration)' == 'Debug' And '$(EnableASAN)' != 'true'">true</LinkIncremental>
     <LinkIncremental Condition="'$(Configuration)' != 'Debug' Or  '$(EnableASAN)' == 'true'">false</LinkIncremental>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
+      <PreprocessorDefinitions Condition="'$(PlatformToolset)' == 'Intel C++ Compiler 2024'">_ALLOW_COMPILER_AND_STL_VERSION_MISMATCH;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)' == 'Debug'">_DEBUG;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)' != 'Debug'">_ITERATOR_DEBUG_LEVEL=0;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions>_WIN32_WINNT=0x0A00;WINVER=0x0A00;NTDDI_VERSION=0x0A000000;WIN32;WIN32_LEAN_AND_MEAN=;NOMINMAX=;_CRT_SECURE_NO_WARNINGS=;_SCL_SECURE_NO_WARNINGS=;_SILENCE_CXX17_OLD_ALLOCATOR_MEMBERS_DEPRECATION_WARNING=;%(PreprocessorDefinitions)</PreprocessorDefinitions>
